# omri-usb

./: README.md  build.gradle  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
omriusb/: .gitignore  CMakeLists.txt  build.gradle
omriusb/src/main/: AndroidManifest.xml
omriusb/src/main/cpp/: callback.h  callbackhandle.h  concurrent_queue.h  dabensemble.cpp  dabensemble.h  dabinput.h  dabmotuserapplicationdecoder.cpp  dabmotuserapplicationdecoder.h  dabmpegservicecomponentdecoder.cpp  dabmpegservicecomponentdecoder.h  dabplusservicecomponentdecoder.cpp  dabplusservicecomponentdecoder.h  dabservice.cpp  dabservice.h  dabservicecomponent.cpp  dabservicecomponent.h  dabservicecomponentdecoder.cpp  dabservicecomponentdecoder.h  dabservicecomponentmscpacketdata.cpp  dabservicecomponentmscpacketdata.h  dabservicecomponentmscstream.cpp  dabservicecomponentmscstream.h  dabservicecomponentmscstreamaudio.cpp  dabservicecomponentmscstreamaudio.h  dabservicecomponentmscstreamdata.cpp  dabservicecomponentmscstreamdata.h  dabuserapplication.cpp  dabuserapplication.h  dabuserapplicationdecoder.cpp  dabuserapplicationdecoder.h  datatypes.h  dynamiclabeldecoder.cpp  dynamiclabeldecoder.h  ficparser.cpp  ficparser.h  fig.h  fig_00.h  fig_00_ext_00.cpp  fig_00_ext_00.h  fig_00_ext_01.cpp  (+61 more)
omriusb/src/main/cpp/platformspecific/android/: androidlogbuf.h  dabusbtunerinput.h  ediinput.cpp  ediinput.h  jdabservice.cpp  jdabservice.h  jtunerusbdevice.cpp  jtunerusbdevice.h  jusbdevice.cpp  jusbdevice.h  native-lib.cpp  raontunerinput.cpp  raontunerinput.h
omriusb/src/main/java/org/omri/radio/: Radio.java  RadioServiceManager.java  RadioStatusListener.java
omriusb/src/main/java/org/omri/radio/impl/: DabAudioDecoder.java  DabAudioDecoderFactory.java  DabTime.java  HradioServiceScanner.java  IcyHttpDataSourceFactory.java  IcyStreamDataSource.java  IpServiceScanner.java  RadioDnsEpgBearer.java  RadioDnsEpgBearerDab.java  RadioDnsEpgBearerIpHttp.java  RadioDnsEpgBearerType.java  RadioImpl.java  RadioServiceDabComponentImpl.java  RadioServiceDabEdiImpl.java  RadioServiceDabImpl.java  RadioServiceDabUserApplicationImpl.java  RadioServiceFmImpl.java  RadioServiceFmPtyImpl.java  RadioServiceImpl.java  RadioServiceIpImpl.java  RadioServiceIpStreamImpl.java  RadioServiceManager.java  SNTPClient.java  SbtItemImpl.java  SpiProgrammeInformationImpl.java  TermIdImpl.java  TextualDabDynamicLabelImpl.java  TextualDabDynamicLabelPlusItemImpl.java  TextualImpl.java  TextualIpIcyImpl.java  TunerEdistream.java  TunerIpShoutcast.java  TunerUsb.java  TunerUsbCallbackTypes.java  TunerUsbImpl.java  UsbHelper.java  VisualDabSlideShowImpl.java  VisualImpl.java  VisualLogoImpl.java  VisualLogoManager.java
omriusb/src/main/java/org/omri/radioservice/: RadioService.java  RadioServiceDab.java  RadioServiceDabComponent.java  RadioServiceDabDataServiceComponentType.java  RadioServiceDabEdi.java  RadioServiceDabUserApplication.java  RadioServiceDabUserApplicationType.java  RadioServiceFm.java  RadioServiceMimeType.java  RadioServiceRawAudiodataListener.java  RadioServiceType.java
omriusb/src/main/java/org/omri/radioservice/metadata/: SbtItem.java  TermId.java  TextualDabDynamicLabel.java  TextualIpIcy.java  Visual.java  VisualIpRdnsRadioVis.java  VisualMimeType.java
omriusb/src/main/java/org/omri/tuner/: ReceptionQuality.java  Tuner.java  TunerListener.java  TunerStatus.java  TunerType.java
omriusb/src/main/res/xml/: device_filter.xml
